# nforge

./: .gitignore  NOTICE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
migrations/: 001_initial.sql  002_phase2.sql  003_phase3.sql
plugins/: daily_digest.py  github_tracker.py  xp_webhook.py
python_sidecar/: config.py  db.py  main.py  pyproject.toml
python_sidecar/analytics/: router.py
python_sidecar/backup/: git.py  router.py
python_sidecar/collab/: rooms.py  router.py
python_sidecar/graph/: builder.py  router.py
python_sidecar/llm/: ingest.py  router.py
python_sidecar/mobile/: router.py
python_sidecar/plugins/: base.py  loader.py  router.py
python_sidecar/search/: embedder.py  indexer.py  router.py
python_sidecar/sm2/: engine.py  router.py
python_sidecar/sync/: router.py  watcher.py
python_sidecar/tests/: test_beta.py  test_phase3.py  test_sm2.py
scripts/: dev.sh  setup.sh  setup_db.sh
src/: App.tsx  api.ts  main.tsx  tokens.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: sidecar.json
src-tauri/src/: backup.rs  blocker.rs  commands.rs  commands_p2.rs  commands_p3.rs  db.rs  error.rs  main.rs  models.rs  plugins_rs.rs  scheduler.rs  sidecar.rs  watcher.rs
src/components/: Dashboard.tsx  Grind.tsx  Projects.tsx  Sidebar.tsx  Skills.tsx  Toast.tsx  Vault.tsx  Vitals.tsx
src/hooks/: useGameState.ts
src/views/: AITutor.tsx  Analytics.tsx  KnowledgeGraph.tsx  Onboarding.tsx  PluginManager.tsx  Settings.tsx  SpacedRepetition.tsx  StudyRoom.tsx
