[package]
name        = "neural-forge"
version     = "1.0.0-beta"
edition     = "2021"
authors     = ["Neural Forge Team"]
description = "Gamified ML learning OS — Tauri 2.0 desktop app"

# ── Build ─────────────────────────────────────────────────────────────────────
[build-dependencies]
tauri-build = { version = "2", features = [] }

# ── Dependencies ─────────────────────────────────────────────────────────────
[dependencies]

# ── Tauri 2.0 core ────────────────────────────────────────────────────────────
tauri = { version = "2", features = ["tray-icon", "image-png"] }

# ── Tauri 2.0 official plugins ────────────────────────────────────────────────
tauri-plugin-fs           = "2"
tauri-plugin-dialog       = "2"
tauri-plugin-shell        = "2"
tauri-plugin-notification = "2"
tauri-plugin-os           = "2"
tauri-plugin-process      = "2"
tauri-plugin-http         = "2"
tauri-plugin-updater      = "2"
tauri-plugin-autostart    = "2"
tauri-plugin-global-shortcut = "2"

# ── Async runtime ─────────────────────────────────────────────────────────────
tokio = { version = "1", features = ["full"] }

# ── SQLite (shared with Python sidecar via WAL mode) ─────────────────────────
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "migrate",
    "uuid",
    "chrono",
] }

# ── HTTP client (sidecar bridge) ──────────────────────────────────────────────
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# ── Serialisation ─────────────────────────────────────────────────────────────
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# ── IDs, time ─────────────────────────────────────────────────────────────────
uuid   = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# ── File watching ─────────────────────────────────────────────────────────────
notify                = "6"
notify-debouncer-mini = "0.4"

# ── System info ───────────────────────────────────────────────────────────────
sysinfo = "0.30"

# ── Error handling ────────────────────────────────────────────────────────────
anyhow    = "1"
thiserror = "1"

# ── Logging ───────────────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ── Utilities ─────────────────────────────────────────────────────────────────
once_cell            = "1"
tokio-cron-scheduler = "0.10"
sha2                 = "0.10"    # mobile API key hashing
walkdir = "2"          # vault directory traversal (watcher.rs)
which   = "6"          # find uv/python3 on PATH (sidecar.rs)

# ── Profiles ─────────────────────────────────────────────────────────────────
[profile.release]
panic         = "abort"
codegen-units = 1
lto           = true
opt-level     = 3
strip         = true

[profile.dev]
incremental = true
